--- a/index.html
+++ b/index.html
@@ -1,40 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="normalize.css" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Frontend Mentor | FAQ Accordion Card</title>
+  </head>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | FAQ Accordion Card</title>
+  <body>
+    <main class="card">
+      <div class="img">
+        <img
+          class="img__main"
+          src="./images/illustration-woman-online-mobile.svg"
+          width="325"
+          height="246"
+        />
+        <img
+          class="img__shadow"
+          src="./images/bg-pattern-mobile.svg"
+          width="245"
+          height="106"
+        />
+      </div>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  How many team members can I invite?
-  You can invite up to 2 additional users on the Free plan. There is no limit on 
-  team members for the Premium plan.
-
-  What is the maximum file upload size?
-  No more than 2GB. All files in your account must fit your allotted storage space.
-
-  How do I reset my password?
-  Click “Forgot password” from the login page or “Change password” from your profile page.
-  A reset link will be emailed to you.
-
-  Can I cancel my subscription?
-  Yes! Send us a message and we’ll process your request no questions asked.
-
-  Do you provide additional support?
-  Chat and email support is available 24/7. Phone lines are open during normal business hours.
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+      <h1 class="card__title">FAQ</h1>
+      <section class="faq">
+        <details class="faq__item">
+          <summary class="faq__heading">
+            How many team members can I invite?
+          </summary>
+          <p class="faq__text">
+            You can invite up to 2 additional users on the Free plan. There is
+            no limit on team members for the Premium plan.
+          </p>
+        </details>
+        <details class="faq__item" open>
+          <summary class="faq__heading">
+            What is the maximum file upload size?
+          </summary>
+          <p class="faq__text">
+            No more than 2GB. All files in your account must fit your allotted
+            storage space.
+          </p>
+        </details>
+        <details class="faq__item">
+          <summary class="faq__heading">How do I reset my password?</summary>
+          <p class="faq__text">
+            Click “Forgot password” from the login page or “Change password”
+            from your profile page. A reset link will be emailed to you.
+          </p>
+        </details>
+        <details class="faq__item">
+          <summary class="faq__heading">Can I cancel my subscription?</summary>
+          <p class="faq__text">
+            Yes! Send us a message and we’ll process your request no questions
+            asked.
+          </p>
+        </details>
+        <details class="faq__item">
+          <summary class="faq__heading">
+            Do you provide additional support?
+          </summary>
+          <p class="faq__text">
+            Chat and email support is available 24/7. Phone lines are open
+            during normal business hours.
+          </p>
+        </details>
+      </section>
+    </main>
+    <footer class="attribution">
+      Challenge by
+      <a
+        href="https://www.frontendmentor.io?ref=challenge"
+        target="_blank"
+        rel="noopener noreferrer"
+        >Frontend Mentor</a
+      >. Coded by
+      <a
+        href="https://github.com/brycestpierre"
+        target="_blank"
+        rel="noopener noreferrer"
+        >Bryce St. Pierre</a
+      >.
+    </footer>
+  </body>
 </html>
