--- a/index.html
+++ b/index.html
@@ -22,13 +22,24 @@
 
   <body>
     <main class="card">
+      <img
+        class="img__box"
+        width="191" 
+        height="184"
+        src="./images/illustration-box-desktop.svg";
+      >
       <div class="img">
-        <img
-          class="img__main"
-          src="./images/illustration-woman-online-mobile.svg"
-          width="325"
-          height="246"
-        />
+        <picture class="img__main">
+          <source
+            media="(min-width: 1100px)"
+            srcset="./images/illustration-woman-online-desktop.svg"
+          />
+          <img
+            src="./images/illustration-woman-online-mobile.svg"
+            width="325"
+            height="246"
+          />
+        </picture>
         <img
           class="img__shadow"
           src="./images/bg-pattern-mobile.svg"
@@ -36,9 +47,8 @@
           height="106"
         />
       </div>
-
-      <h1 class="card__title">FAQ</h1>
       <section class="faq">
+        <h1 class="card__title">FAQ</h1>
         <details class="faq__item">
           <summary class="faq__heading">
             How many team members can I invite?
