Fixed accessibility issues.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         class="img__box"
         width="191" 
         height="184"
-        src="./images/illustration-box-desktop.svg";
+        src="./images/illustration-box-desktop.svg"
+        alt="Box graphic"
       >
       <div class="img">
         <picture class="img__main">
@@ -38,6 +39,7 @@
             src="./images/illustration-woman-online-mobile.svg"
             width="325"
             height="246"
+            alt="Woman online graphic"
           />
         </picture>
         <img
@@ -45,6 +47,7 @@
           src="./images/bg-pattern-mobile.svg"
           width="245"
           height="106"
+          alt="Shadow graphic"
         />
       </div>
       <section class="faq">
